# TelharTactical

./: .gitignore  CMakeLists.txt  config.ini  readme.md  readme.txt
build_vs/: Project.props  TelharTactical.sln  TelharTactical.vcxproj  TelharTactical.vcxproj.filters
build_vs/TelharTest/: TelharTest.vcxproj  TelharTest.vcxproj.filters
build_vs/applib/: applib.vcxproj  applib.vcxproj.filters  applib_public.props
build_vs/gamelib/: gamelib.vcxproj  gamelib.vcxproj.filters
cmake/: FindSDL2_image.cmake
lib/applib/include/sdl/: macro.h  resource.h  texture.h  ttf.h
lib/applib/include/serial/: config.h  tiled.h
lib/applib/src/sdl/: texture.cpp  ttf.cpp
lib/applib/src/serial/: config.cpp  tiled.cpp
lib/gamelib/include/game/: layer.h  map.h  object.h  tile.h
lib/gamelib/include/math/: vector2.h
lib/gamelib/src/game/: map.cpp
res/: test_infinite_map.json  test_tileset.json  test_tileset2.json
src/: algorithm_extra.h  command_args.cpp  command_args.h  config_args.cpp  config_args.h  game_data.cpp  game_data.h  main.cpp
src/game/: map.cpp  map.h  tile.h  tileset.h
src/math/: vector2.h
src/sdl/: resource.cpp  texture.cpp
src/serial/: config.cpp  config.h  error.h  tiled.cpp  tiled.h
test/src/serial/: config.cpp  test_tiled_map.h  test_tileset.h  tiled.cpp
